--- a/source/stylesheets/base/_base.scss
+++ b/source/stylesheets/base/_base.scss
@@ -6,6 +6,7 @@
 @import "variables";
 @import "mixins";
 
+@import "utility";
 @import "buttons";
 @import "forms";
 @import "feature_sections";
@@ -16,3 +17,4 @@
 @import "tables";
 @import "typography";
 @import "components/recipes";
+@import "components/brackets";
