--- a/source/stylesheets/base/_buttons.scss
+++ b/source/stylesheets/base/_buttons.scss
@@ -15,7 +15,7 @@ $_button-background-color-hover: shade($action-color, 20%);
   font-size: $base-font-size;
   font-weight: 800;
   line-height: 1;
-  padding: 9px $small-spacing;
+  padding: 0.5em $small-spacing;
   text-align: center;
   text-decoration: none;
   transition: background-color $base-duration $base-timing;
@@ -43,12 +43,8 @@ $_button-background-color-hover: shade($action-color, 20%);
   }
 }
 
-.secondary {
+.button-secondary {
   background-color: transparent;
-  border: 2px solid $action-color;
+  border: $base-border-width solid $action-color;
   color: $action-color;
-}
-
-.top-space {
-  margin-top: $small-spacing;
 }
