--- a/source/stylesheets/base/_feature_sections.scss
+++ b/source/stylesheets/base/_feature_sections.scss
@@ -13,13 +13,13 @@
   .container {
     display: flex;
 
-    .illustration,
+    .illustration-wrapper,
     .text-and-description {
       @include grid-column(6 of 12);
       display: flex;
     }
 
-    .illustration {
+    .illustration-wrapper {
       align-items: flex-end;
       justify-content: flex-end;
     }
@@ -51,14 +51,11 @@
     .flavors {
       align-items: flex-end;
       display: flex;
+      justify-content: space-around;
     }
 
     .flavor {
-      @include grid-column(4 of 12);
-    }
-
-    .bracket {
-      @include generate-bracket(150px);
+      flex-basis: 0;
     }
   }
 }
@@ -80,7 +77,7 @@
       justify-content: flex-end;
     }
 
-    .illustration {
+    .illustration-wrapper {
       @include grid-column(5 of 12);
       align-items: center;
       display: flex;
@@ -96,8 +93,9 @@
 }
 
 .latest-posts {
+  @include clearfix;
+
   .container {
-    height: 500px;
     padding: 50px;
     text-align: center;
 
@@ -111,10 +109,6 @@
 
       img {
         height: 220px;
-      }
-
-      .bracket {
-        @include generate-bracket(150px);
       }
     }
   }
