--- a/source/stylesheets/base/_mixins.scss
+++ b/source/stylesheets/base/_mixins.scss
@@ -4,19 +4,12 @@
   height: $height;
   justify-content: space-between;
   margin-top: $base-spacing;
-  text-align: center;
-
-  *:first-child {
-    justify-content: flex-start;
-  }
 
   *:nth-child(2) {
-    -webkit-margin-after: 0;
-    -webkit-margin-before: 0;
+    margin: 0;
   }
 
   *:last-child {
-    justify-content: flex-end;
     margin: 0 auto;
   }
 }
