--- a/source/stylesheets/base/_variables.scss
+++ b/source/stylesheets/base/_variables.scss
@@ -9,12 +9,14 @@ $heading-line-height: 1.2;
 
 // Other Sizes
 $base-border-radius: 3px;
-$large-border-radius: 30px;
+$large-border-radius: 1.5em;
 $base-spacing: 50px;
 $small-spacing: $base-spacing / 2;
 $smallest-spacing: $small-spacing / 2;
 $large-spacing: $base-spacing * 2;
 $base-z-index: 0;
+$base-border-width: 2px;
+$large-border-width: 4px;
 
 // Colors
 $dark-gray: #333;
