--- a/source/entries/recipes/roasted-banana.html.erb
+++ b/source/entries/recipes/roasted-banana.html.erb
@@ -5,6 +5,7 @@ date: 2017-10-18 20:11 UTC
 layout: recipes
 category: recipes
 illustration_tag: ../../../images/illustrations/banana-combined.png
+expanded_illustration_tag: ../../../images/illustrations/banana.png
 photo_tag:
 ingredients_tag: ../../../images/illustrations/bananas.png
 
