Add content in recipes and more illustrations
This commit adds a bunch of illustrations and more elaborate
instructions for more entries and flavors.

--- a/source/entries/recipes/crema-di-riso.html.erb
+++ b/source/entries/recipes/crema-di-riso.html.erb
@@ -1,16 +1,16 @@
 ---
 
-title: Strawberry
-date: 2017-10-04 21:47 UTC
+title: Cream di Riso
+date: 2017-10-25 20:11 UTC
 layout: recipes
 category: recipes
-illustration_tag: ../../../images/illustrations/strawberry-combined.png
+illustration_tag: ../../../images/illustrations/crema-di-riso-combined.png
 photo_tag:
-ingredients_tag: ../../../images/illustrations/strawberries.png
+ingredients_tag: ../../../images/illustrations/crema-di-riso.png
 
 ---
 
-This basic flavor is really only okay if you actually use good strawberriers. Pro tip is to smell them: if they don't smell like anything they won't taste like anything.
+Roasted banana ice cream: the creamiest of cold creams ever.
 
 READMORE
 
@@ -19,9 +19,8 @@ READMORE
 </h3>
 
 <ul>
-    <li>1 cup awesome strawberries</li>
-    <li>Lemon juice</li>
-    <li>Sugar</li>
+    <li>Jasmine Rice</li>
+    <li>Dark Chocolate</li>
     <li>8 egg yolks</li>
     <li>2 cups heavy cream</li>
     <li>3/4 cups sugar</li>
@@ -32,10 +31,6 @@ READMORE
 </h3>
 
 <ol>
-    <h4>Strawberries</h4>
-    <li>Cut up the strawberries into quarters or so.</li>
-    <li>Toss them in ___ of the sugar and the lemon juice and let them sit until they're ready to use (or for at least 30 minutes).</li>
-    <br />
     <h4>Custard</h4>
     <li>Prepare a large bowl filled with ice water with a smaller bowl sitting in the water. This will be used to cool the cooked custard later.</li>
     <li>Combine the milk, heavy cream, and 1/2 cup white sugar in a medium saucepan and heat over low to medium heat.</li>
@@ -47,8 +42,7 @@ READMORE
     <li>Take it off the heat and strain the custard into the bowl set over the ice bath. Stir for about 5 minutes until the custard has cooled.</li>
     <br />
     <h4>Combine</h4>
-    <li>Once the custard has cooled, use an immersion blender (or regular blender if you don't have one) to combine the strawberries with the custard.</li>
+    <li>Once the custard has cooled, use an immersion blender (or regular blender if you don't have one) to combine the roasted bananas with the custard.</li>
     <li>Place the custard in an airtight container and let the it cool completely in the fridge (this is important people!) for at least 4 hours, but preferably overnight.</li>
     <li>Once it's ready, churn it according to your ice cream maker's instructions until it's the consistency of soft servce. You can eat it right away for a softer texture, or freeze it for later.</li>
 </ol>
-
