--- a/source/entries/recipes/peanut-butter-cookies-and-cream.html.erb
+++ b/source/entries/recipes/peanut-butter-cookies-and-cream.html.erb
@@ -1,6 +1,6 @@
 ---
 
-title: Peanut Butter Cookies and Cream
+title: Peanut Butter Cookies & Cream
 date: 2017-10-04 20:11 UTC
 layout: recipes
 category: recipes
@@ -10,8 +10,38 @@ ingredients_tag: ../../../images/illustrations/oreos.png
 
 ---
 
-This is a summary for peanut butter cookies and cream ice cream.
+What's better than oreos and peanut butter? Nothing! That's why I combined them into one of my favorite flavors (but let's be real, they're all my favorite).
 
 READMORE
 
-This is an article about ice cream.
+<h3 class="recipe-section-header">
+    Ingredients
+</h3>
+
+<ul>
+    <li>1 ½ cup heavy cream</li>
+    <li>1 ½ cup whole milk</li>
+    <li>½ cup sugar</li>
+    <li>¼ cup brown sugar</li>
+    <li>¾ teaspoon xanthan gum</li>
+    <li>1 pinch salt</li>
+    <li>⅓ cup creamy peanut butter</li>
+    <li>1 cup Oreo, chopped</li>
+</ul>
+
+<h3 class="recipe-section-header">
+    Directions
+</h3>
+
+<ol>
+    <h4>Philadelphia Style Custard</h4>
+    <li>Prep the sugar, brown sugar, salt and xantham gum by gently mixing them together.</li>
+    <li>Pour the milk in a pot, whisk in the sugar/xantham mixture.</li>
+    <li>Add the corn syrup.</li>
+    <li>Heat the milk mixture on low-medium heat stirring constantly until it thickens and the sugar is completely melted into the milk. Make sure not to let it boil because the milk will curdle. Start with a lower temperature and let it heat up slowly for more control.</li>
+    <li>Once thickened, whisk in the peanut butter until the mixture is homogenous.</li>
+    <li>Once it's cooled down a little, add the heavy cream and stir to mix.</li>
+    <li>Let sit overnight in the fridge (or at least 4 hours). *Do not skip this step or it will not freeze properly.</li>
+    <li>Add to your ice cream maker and freeze according to the machine's instructions. Add the chopped oreos when there is about 5 minutes left in the churning. Stop churning when it reaches the consistency of soft serve.</li>
+    <li>You can eat it right away for softer ice cream or freeze it for several hours to have harder ice cream.</li>
+</ol>
