--- a/source/entries/recipes/crema-di-riso.html.erb
+++ b/source/entries/recipes/crema-di-riso.html.erb
@@ -5,6 +5,7 @@ date: 2017-10-25 20:11 UTC
 layout: recipes
 category: recipes
 illustration_tag: ../../../images/illustrations/crema-di-riso-combined.png
+expanded_illustration_tag: ../../../images/illustrations/crema-di-riso.png
 photo_tag:
 ingredients_tag: ../../../images/illustrations/crema-di-riso.png
 
