Add more recipes and layout fixes

--- a/source/entries/recipes/fat-elvis.html.erb
+++ b/source/entries/recipes/fat-elvis.html.erb
@@ -5,8 +5,9 @@ date: 2017-03-09 20:11 UTC
 layout: recipes
 category: recipes
 illustration_tag: ../../../images/illustrations/fat-elvis-combined.png
+expanded_illustration_tag: ../../../images/illustrations/fat-elvis.png
 photo_tag:
-ingredients_tag: ../../../images/illustrations/fat-elvis.png
+ingredients_tag: ../../../images/illustrations/peanut-butter-cups.png
 
 ---
 
