--- a/source/entries/recipes/strawberry.html.erb
+++ b/source/entries/recipes/strawberry.html.erb
@@ -5,6 +5,7 @@ date: 2017-10-04 21:47 UTC
 layout: recipes
 category: recipes
 illustration_tag: ../../../images/illustrations/strawberry-combined.png
+expanded_illustration_tag: ../../../images/illustrations/strawberry.png
 photo_tag:
 ingredients_tag: ../../../images/illustrations/strawberries.png
 
