--- a/source/stylesheets/base/_mixins.scss
+++ b/source/stylesheets/base/_mixins.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   height: $height;
   justify-content: space-between;
-  margin-top: $base-spacing;
+  margin-top: $small-spacing;
 
   *:nth-child(2) {
     margin: 0;
