--- a/source/entries/recipes/crema-di-riso.html.erb
+++ b/source/entries/recipes/crema-di-riso.html.erb
@@ -1,13 +1,13 @@
 ---
 
-title: Cream di Riso
+title: Crema di Riso
 date: 2017-10-25 20:11 UTC
 layout: recipes
 category: recipes
 illustration_tag: ../../../images/illustrations/crema-di-riso-combined.png
 expanded_illustration_tag: ../../../images/illustrations/crema-di-riso.png
 photo_tag:
-ingredients_tag: ../../../images/illustrations/crema-di-riso.png
+ingredients_tag: ../../../images/illustrations/spices.png
 
 ---
 
