--- a/source/entries/recipes/mint-chip-brownie.html.erb
+++ b/source/entries/recipes/mint-chip-brownie.html.erb
@@ -5,8 +5,9 @@ date: 2017-10-26 20:11 UTC
 layout: recipes
 category: recipes
 illustration_tag: ../../../images/illustrations/mint-chip-brownie-combined.png
+expanded_illustration_tag: ../../../images/illustrations/mint-chip-brownie.png
 photo_tag:
-ingredients_tag: ../../../images/illustrations/mint-chip-brownie.png
+ingredients_tag: ../../../images/illustrations/mint-brownie.png
 
 ---
 
