--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -59,7 +59,6 @@ per_page: 4
         <img src="<%= article.data.illustration_tag %>" class="fadeIn" />
       </div>
     <% end %>
-    <%= inline_svg("images/drawn-rule.svg", class: 'drawn-rule') %>
   </div>
 </div>
 
@@ -93,4 +92,5 @@ per_page: 4
       <% end %>
     </div>
   </div>
+  <div class="decorative-half-box"></div>
 </div>
