--- a/source/layouts/recipes.erb
+++ b/source/layouts/recipes.erb
@@ -1,7 +1,7 @@
 <% wrap_layout :layout do %>
   <div class="jumbo-feature">
-    <div class="container">
-      <div class="illustration">
+    <div class="container single-entry">
+      <div class="illustration-wrapper">
         <img src="<%= current_page.data.expanded_illustration_tag %>" class="fadeIn" />
       </div>
       <div class="text-and-description">
