--- a/source/stylesheets/base/_feature_sections.scss
+++ b/source/stylesheets/base/_feature_sections.scss
@@ -38,6 +38,17 @@
       margin-bottom: 10px;
     }
   }
+
+  .single-entry .illustration-wrapper {
+    position: relative;
+
+    img {
+      height: auto;
+      position: absolute;
+      top: 0;
+      width: 500px;
+    }
+  }
 }
 
 .featured-flavors {
@@ -110,7 +121,7 @@
       @include grid-column(3 of 12);
 
       img {
-        width: 150px;
+        width: 175px;
       }
     }
   }
