Added recipes and updated content

--- a/source/entries/recipes/cookie-caramel.html.erb
+++ b/source/entries/recipes/cookie-caramel.html.erb
@@ -1,17 +1,17 @@
 ---
 
-title: Fat Elvis
-date: 2017-03-09 20:11 UTC
+title: Cookie Caramel
+date: 2017-10-25 20:11 UTC
 layout: recipes
 category: recipes
-illustration_tag: ../../../images/illustrations/fat-elvis-combined.png
-expanded_illustration_tag: ../../../images/illustrations/fat-elvis.png
+illustration_tag: ../../../images/illustrations/cookie-caramel-combined.png
+expanded_illustration_tag: ../../../images/illustrations/cookie-caramel.png
 photo_tag:
-ingredients_tag: ../../../images/illustrations/peanut-butter-cups.png
+ingredients_tag: ../../../images/illustrations/oreos.png
 
 ---
 
-Roasted banana ice cream: the creamiest of cold creams ever.
+Had to switch it up and add some sweet caramel to the cookies & cream because it can't be that basic. It's delicious.
 
 READMORE
 
@@ -20,11 +20,13 @@ READMORE
 </h3>
 
 <ul>
-    <li>Jasmine Rice</li>
-    <li>Dark Chocolate</li>
-    <li>8 egg yolks</li>
+    <li>½-1 cup oreos</li>
+    <li>Caramel of choice</li>
+    <li>6 egg yolks</li>
     <li>2 cups heavy cream</li>
+    <li>½ cup whole milk</li>
     <li>3/4 cups sugar</li>
+    <li>½ tsp. salt</li>
 </ul>
 
 <h3 class="recipe-section-header">
@@ -43,7 +45,6 @@ READMORE
     <li>Take it off the heat and strain the custard into the bowl set over the ice bath. Stir for about 5 minutes until the custard has cooled.</li>
     <br />
     <h4>Combine</h4>
-    <li>Once the custard has cooled, use an immersion blender (or regular blender if you don't have one) to combine the roasted bananas with the custard.</li>
     <li>Place the custard in an airtight container and let the it cool completely in the fridge (this is important people!) for at least 4 hours, but preferably overnight.</li>
-    <li>Once it's ready, churn it according to your ice cream maker's instructions until it's the consistency of soft servce. You can eat it right away for a softer texture, or freeze it for later.</li>
+    <li>Once it's ready, churn it according to your ice cream maker's instructions until it's the consistency of soft servce. During the last 5 minutes of churning, add the cookiest and caramel into the mix until the caramel forms ribbons. You can eat it right away for a softer texture, or freeze it for later.</li>
 </ol>
