--- a/source/entries/recipes/mint-chip-brownie.html.erb
+++ b/source/entries/recipes/mint-chip-brownie.html.erb
@@ -11,7 +11,7 @@ ingredients_tag: ../../../images/illustrations/mint-brownie.png
 
 ---
 
-Roasted banana ice cream: the creamiest of cold creams ever.
+Everyone loves mint chip but how can we make it more interesting? Well nothing is made worse by the addition of delicious slightly undercooked brownies.
 
 READMORE
 
@@ -20,11 +20,13 @@ READMORE
 </h3>
 
 <ul>
-    <li>Brownies</li>
-    <li>Dark Chocolate</li>
-    <li>8 egg yolks</li>
     <li>2 cups heavy cream</li>
-    <li>3/4 cups sugar</li>
+    <li>1 cup whole milk</li>
+    <li>½ cup + 2 tbsp. sugar</li>
+    <li>6 egg yolks</li>
+    <li>1-2 brownies, small pieces</li>
+    <li>1½ tsp. mint extract</li>
+    <li>½ cup dark chocolate, chopped</li>
 </ul>
 
 <h3 class="recipe-section-header">
@@ -43,7 +45,6 @@ READMORE
     <li>Take it off the heat and strain the custard into the bowl set over the ice bath. Stir for about 5 minutes until the custard has cooled.</li>
     <br />
     <h4>Combine</h4>
-    <li>Once the custard has cooled, use an immersion blender (or regular blender if you don't have one) to combine the roasted bananas with the custard.</li>
     <li>Place the custard in an airtight container and let the it cool completely in the fridge (this is important people!) for at least 4 hours, but preferably overnight.</li>
-    <li>Once it's ready, churn it according to your ice cream maker's instructions until it's the consistency of soft servce. You can eat it right away for a softer texture, or freeze it for later.</li>
+    <li>Once it's ready add the mint extract, churn it according to your ice cream maker's instructions until it's the consistency of soft servce. About 5 minutes before the churning is done, add the dark chocolate and brownies to the mixture. You can eat it right away for a softer texture, or freeze it for later.</li>
 </ol>
