--- a/source/entries/recipes/pistachio.html.erb
+++ b/source/entries/recipes/pistachio.html.erb
@@ -1,17 +1,17 @@
 ---
 
-title: Crema di Riso
-date: 2017-10-23 20:11 UTC
+title: Pistachio
+date: 2017-03-29 20:11 UTC
 layout: recipes
 category: recipes
-illustration_tag: ../../../images/illustrations/crema-di-riso-combined.png
-expanded_illustration_tag: ../../../images/illustrations/crema-di-riso.png
+illustration_tag: ../../../images/illustrations/pistachio-combined.png
+expanded_illustration_tag: ../../../images/illustrations/pistachio.png
 photo_tag:
-ingredients_tag: ../../../images/illustrations/spices.png
+ingredients_tag: ../../../images/illustrations/pistachios.png
 
 ---
 
-I know this seems like a weird combo, and if you don't like rice pudding then that's sad but if you do! you will probably love this. The flavors are so smooth and lovely.
+Roasted banana ice cream: the creamiest of cold creams ever.
 
 READMORE
 
@@ -20,16 +20,14 @@ READMORE
 </h3>
 
 <ul>
-    <li>1 cup jasmine rice</li>
-    <li>1½ cups whole milk</li>
-    <li>8 egg yolks</li>
-    <li>2 cups heavy cream</li>
-    <li>3/4 cups sugar</li>
-    <li>1 bay leaf</li>
-    <li>1/4 tsp. nutmeg</li>
-    <li>½ tsp. ground cardamom</li>
-    <li>½ vanilla bean, seeds scraped out</li>
-    <li>pinch of salt</li>
+    <li>¾ cup unsalted pistachios, shelled</li>
+    <li>6 tbsp. heavy cream</li>
+    <br />
+    <li>1½ cups half and half</li>
+    <li>¾ cup granulated sugar</li>
+    <li>5 large egg yolks</li>
+    <li>1½ cups heavy cream</li>
+    <li>½ tsp. almond extract</li>
 </ul>
 
 <h3 class="recipe-section-header">
@@ -37,14 +35,12 @@ READMORE
 </h3>
 
 <ol>
-    <h4>Rice Pudding</h4>
-    <li>Put rice in a saucepan and add enough water to cover it. Bring the water to a boil, then reduce the heat to low and simmer until the rice softens. Drain any excess water.</li>
-    <li>Add 1 cup of milk, ½ cup sugar, salt, the bay leaf, cardamom, nutmeg, and the vanilla bean seeds and pod.</li>
-    <li>Bring to a simmer and then reduce heat and keep it uncovered until fully cooked and the milk has been mostly absorbed by the rice. You can refrigerate the rice pudding until it is ready to be used.</li>
+    <h4>Pistachio Paste</h4>
+    <li>Combine pistachio nuts and cream in a food processor, then pulse until the mixture becomes a fine paste.</li>
     <br />
     <h4>Custard</h4>
     <li>Prepare a large bowl filled with ice water with a smaller bowl sitting in the water. This will be used to cool the cooked custard later.</li>
-    <li>Combine the remaining 1/5 cup milk, heavy cream, and pinch of salt in a medium saucepan and heat over low to medium heat.</li>
+    <li>Combine the milk, heavy cream, and 1/2 cup white sugar in a medium saucepan and heat over low to medium heat.</li>
     <li>Meanwhile, whisk together the egg yolks with the remaining 1/4 cup sugar in a separate bowl.</li>
     <li>Once steam is coming off of the heated milk/cream in the saucepan, pour a splash into the egg mixture while whisking it continuously.</li>
     <li>Continue to add small amounts of the milk/cream to the eggs while whisking until you've added all of it into the separate bowl.</li>
@@ -53,7 +49,7 @@ READMORE
     <li>Take it off the heat and strain the custard into the bowl set over the ice bath. Stir for about 5 minutes until the custard has cooled.</li>
     <br />
     <h4>Combine</h4>
-    <li>Once the custard has cooled, fold in the rice pudding until combined.</li>
+    <li>Once the custard has cooled, combine the almond extract and pistachio paste with the custard.</li>
     <li>Place the custard in an airtight container and let the it cool completely in the fridge (this is important people!) for at least 4 hours, but preferably overnight.</li>
     <li>Once it's ready, churn it according to your ice cream maker's instructions until it's the consistency of soft servce. You can eat it right away for a softer texture, or freeze it for later.</li>
 </ol>
