--- a/source/entries/recipes/strawberry.html.erb
+++ b/source/entries/recipes/strawberry.html.erb
@@ -1,7 +1,7 @@
 ---
 
 title: Strawberry
-date: 2017-10-04 21:47 UTC
+date: 2017-06-29 21:47 UTC
 layout: recipes
 category: recipes
 illustration_tag: ../../../images/illustrations/strawberry-combined.png
@@ -21,11 +21,12 @@ READMORE
 
 <ul>
     <li>1 cup awesome strawberries</li>
-    <li>Lemon juice</li>
-    <li>Sugar</li>
-    <li>8 egg yolks</li>
+    <li>1 tbsp. lemon juice</li>
+    <li>1 cup sugar</li>
+    <li>6 egg yolks</li>
     <li>2 cups heavy cream</li>
-    <li>3/4 cups sugar</li>
+    <li>½ whole milk</li>
+    <li>1/4 tsp. salt</li>
 </ul>
 
 <h3 class="recipe-section-header">
@@ -35,7 +36,7 @@ READMORE
 <ol>
     <h4>Strawberries</h4>
     <li>Cut up the strawberries into quarters or so.</li>
-    <li>Toss them in ___ of the sugar and the lemon juice and let them sit until they're ready to use (or for at least 30 minutes).</li>
+    <li>Toss them in 1/4 cup of the sugar and the lemon juice and let them sit until they're ready to use (or for at least 30 minutes).</li>
     <br />
     <h4>Custard</h4>
     <li>Prepare a large bowl filled with ice water with a smaller bowl sitting in the water. This will be used to cool the cooked custard later.</li>
