--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -14,7 +14,7 @@
   <body class="<%= page_classes %>">
     <div class="nav">
       <div class="container">
-        <% link_to 'http://www.icecreamonasunday.com' do %>
+        <% link_to 'http://www.icecreamonasunday.com', :class => "blog-title-link" do %>
           <h1 class="blog-title"><span class="blog-title-first-line">Ice Cream </span><br />on a Sunday</h1>
         <% end %>
         <ul>
