--- a/source/entries/recipes/roasted-banana.html.erb
+++ b/source/entries/recipes/roasted-banana.html.erb
@@ -1,7 +1,7 @@
 ---
 
 title: Roasted Banana
-date: 2017-10-18 20:11 UTC
+date: 2017-10-01 20:11 UTC
 layout: recipes
 category: recipes
 illustration_tag: ../../../images/illustrations/banana-combined.png
@@ -21,11 +21,14 @@ READMORE
 
 <ul>
     <li>4 ripe bananas, sliced</li>
-    <li>Salted butter</li>
-    <li>Dark brown sugar</li>
-    <li>8 egg yolks</li>
+    <li>4 tbsp. unsalted butter</li>
+    <li>pinch of salt</li>
+    <li>2 tbsp. dark brown sugar</li>
+    <li>6 egg yolks</li>
     <li>2 cups heavy cream</li>
+    <li>½ cup whole milk</li>
     <li>3/4 cups sugar</li>
+    <li>½ tsp. salt</li>
 </ul>
 
 <h3 class="recipe-section-header">
