--- a/source/entries/recipes/sour-cream-blueberry-compote.html.erb
+++ b/source/entries/recipes/sour-cream-blueberry-compote.html.erb
@@ -1,7 +1,7 @@
 ---
 
 title: Sour Cream & Blueberry Compote
-date: 2017-10-20 20:11 UTC
+date: 2017-07-13 20:11 UTC
 layout: recipes
 category: recipes
 illustration_tag: ../../../images/illustrations/sour-cream-blueberry-compote-combined.png
@@ -11,7 +11,7 @@ ingredients_tag: ../../../images/illustrations/blueberries.png
 
 ---
 
-Roasted banana ice cream: the creamiest of cold creams ever.
+Honestly this flavor was okay. Not my favorite. You might be thinking, why is it on this blog? Well, it's fun to make these illustrations and purple swirl looks pretty.
 
 READMORE
 
@@ -20,12 +20,14 @@ READMORE
 </h3>
 
 <ul>
-    <li>4 ripe bananas, sliced</li>
-    <li>Salted butter</li>
-    <li>Dark brown sugar</li>
+    <li>½ cup fresh blueberries</li>
+    <li>2 tbsp. sugar</li>
+    <li>Drop of lemon juice</li>
+    <li>1½ cups heavy cream</li>
+    <li>2 tbsp. whole milk</li>
+    <li>1/4 tsp. salt</li>
     <li>8 egg yolks</li>
-    <li>2 cups heavy cream</li>
-    <li>3/4 cups sugar</li>
+    <li>1½ cups sour cream</li>
 </ul>
 
 <h3 class="recipe-section-header">
@@ -33,11 +35,9 @@ READMORE
 </h3>
 
 <ol>
-    <h4>Roasted Bananas</h4>
-    <li>Preheat the oven to 400F.</li>
-    <li>Toss the brown sugar, butter, and sliced bananas in a bowl until combined.</li>
-    <li>Spread them on a baking sheet and put in the oven until caramelized (about 15-20 min).</li>
-    <li>Take them off the baking sheet and let cool (the melted sugar will make them stick to the pan). They don't have to look pretty because they'll be blended into the ice cream.</li>
+    <h4>Blueberry Compote</h4>
+    <li>Combine the blueberries, sugar, and lemon juice and bring to a simmer over medium heat in a saucepan. Cook until the berries are soft and the juices thicken.</li>
+    <li>Set aside to cool for later.</li>
     <br />
     <h4>Custard</h4>
     <li>Prepare a large bowl filled with ice water with a smaller bowl sitting in the water. This will be used to cool the cooked custard later.</li>
@@ -47,10 +47,9 @@ READMORE
     <li>Continue to add small amounts of the milk/cream to the eggs while whisking until you've added all of it into the separate bowl.</li>
     <li>Pour the combined mixture back into the saucepan and set over low to medium heat. Stir continuously with a rubber spatula or wooden spoon.</li>
     <li>After stirring for several minutes the custard will start to thicken. Once you can pick up the spatula or spoon and the custard sticks to it, hold it horizontally and run your finger through the custard. If it leaves a trail that stays, your custard is ready.</li>
-    <li>Take it off the heat and strain the custard into the bowl set over the ice bath. Stir for about 5 minutes until the custard has cooled.</li>
+    <li>Take it off the heat and strain the custard into the bowl set over the ice bath. Add the sour cream and use an immersion blender until it's all combined. Stir for about 5 minutes until the custard has cooled.</li>
     <br />
     <h4>Combine</h4>
-    <li>Once the custard has cooled, use an immersion blender (or regular blender if you don't have one) to combine the roasted bananas with the custard.</li>
     <li>Place the custard in an airtight container and let the it cool completely in the fridge (this is important people!) for at least 4 hours, but preferably overnight.</li>
-    <li>Once it's ready, churn it according to your ice cream maker's instructions until it's the consistency of soft servce. You can eat it right away for a softer texture, or freeze it for later.</li>
+    <li>Once it's ready, churn it according to your ice cream maker's instructions until it's the consistency of soft servce. Fold the blueberry compote in at the very end of churning or while you're transferring the ice cream to containers for the freezer. You can eat it right away for a softer texture, or freeze it for later.</li>
 </ol>
