--- a/source/stylesheets/base/_media.scss
+++ b/source/stylesheets/base/_media.scss
@@ -6,7 +6,12 @@ figure {
   img {
     height: 645px;
     margin-top: -50px;
+    transition: transform $base-duration;
     z-index: 999;
+
+    &:hover {
+      transform: rotate(-3deg);
+    }
   }
   article img {
     height: 100px;
@@ -17,5 +22,18 @@ figure {
 
 .featured-flavors img {
   padding: 25px;
-  width: 205px;;
+  transition: transform $base-duration;
+  width: 205px;
+
+  &:hover {
+    transform: rotate(5deg);
+  }
+}
+
+.latest-posts img {
+  transition: transform $base-duration;
+
+  &:hover {
+    transform: rotate(5deg);
+  }
 }
