Implement media queries for mobile styles on homepage
This PR adds mobile media queries for the featured sections and
navigation on the homepage including disabling the shrinking
header javascript for mobile screens. Currently the media queries
are sitting in the same files as the featured-sections but those
can potentially be split up into separate component files.

--- a/source/entries/recipes/peanut-butter-cookies-and-cream.html.erb
+++ b/source/entries/recipes/peanut-butter-cookies-and-cream.html.erb
@@ -5,6 +5,7 @@ date: 2017-07-01 20:11 UTC
 layout: recipes
 category: recipes
 illustration_tag: ../../../images/illustrations/peanut-butter-cookies-and-cream-combined.png
+expanded_illustration_tag: ../../../images/illustrations/peanut-butter-cookies-and-cream.png
 photo_tag:
 ingredients_tag: ../../../images/illustrations/oreos.png
 
