--- a/source/stylesheets/base/components/_brackets.scss
+++ b/source/stylesheets/base/components/_brackets.scss
@@ -1,3 +1,25 @@
 .article-link-bracket {
   @include generate-bracket(150px);
 }
+
+@media only screen
+  and (max-device-width: 640px),
+  only screen and (max-device-width: 667px),
+  only screen and (max-width: 480px) {
+  .article-link-bracket {
+    background-color: $white;
+    display: block;
+    height: auto;
+    margin-top: 0;
+    padding: 5rem 0 3rem;
+    text-align: center;
+
+     > *:not(:last-child) {
+      margin-bottom: 1rem;
+    }
+
+    a {
+      margin: 0 auto;
+    }
+  }
+}
