--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -17,7 +17,7 @@
         <% link_to 'http://www.icecreamonasunday.com', :class => "blog-title-link" do %>
           <h1 class="blog-title"><span class="blog-title-first-line">Ice Cream </span><br />on a Sunday</h1>
         <% end %>
-        <ul>
+        <ul class="nav-links">
           <li><%= link_to 'Home', '/index.html', :relative => true %></li>
           <li><%= link_to 'Recipes', '/recipes.html', :relative => true %></li>
           <li><%= link_to 'About', '/about.html', :relative => true %></li>
