--- a/source/stylesheets/base/_layout.scss
+++ b/source/stylesheets/base/_layout.scss
@@ -51,3 +51,12 @@ body {
     justify-content: space-around;
   }
 }
+
+@media only screen
+  and (max-device-width: 640px),
+  only screen and (max-device-width: 667px),
+  only screen and (max-width: 480px) {
+  .container {
+    max-width: 100%;
+  }
+}
