--- a/source/stylesheets/base/_utility.scss
+++ b/source/stylesheets/base/_utility.scss
@@ -1,3 +1,13 @@
 .top-margin-small {
   margin-top: $small-spacing;
 }
+
+
+@media only screen
+  and (max-device-width: 640px),
+  only screen and (max-device-width: 667px),
+  only screen and (max-width: 480px) {
+  .hidden-mobile {
+    display: none;
+  }
+}
