Media queries using Neat and other edits per Mike's comments

--- a/source/stylesheets/base/_base.scss
+++ b/source/stylesheets/base/_base.scss
@@ -18,3 +18,7 @@
 @import "typography";
 @import "components/recipes";
 @import "components/brackets";
+@import "components/jumbo_feature";
+@import "components/featured_flavors";
+@import "components/featured_tip";
+@import "components/latest_posts";
