--- a/source/stylesheets/base/_navigation.scss
+++ b/source/stylesheets/base/_navigation.scss
@@ -9,22 +9,30 @@
   z-index: 999;
 
   .container {
+    @include grid-media($large-screen-up) {
+      flex-direction: row;
+    }
+    align-items: center;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     position: relative;
+    width: 100%;
 
     h3 {
       flex: 1 0 0;
     }
 
-    ul {
-      @include position(absolute, null 0 20px null);
+    .nav-links {
+      @include grid-media($large-screen-up) {
+        @include position(absolute, null 0 20px null);
+      }
       display: flex;
       list-style: none;
+      padding: $small-spacing 0 $smallest-spacing;
+      position: static;
     }
 
     a {
-      // @include padding(null 0 $smallest-spacing);
       border-bottom: 0 solid transparent;
       color: $white;
       font-weight: 800;
@@ -47,9 +55,13 @@
 }
 
 .blog-title {
+  @include grid-media($large-screen-up) {
+    font-size: 87px;
+    line-height: 80px;
+  }
   color: $white;
-  font-size: 87px;
-  line-height: 80px;
+  font-size: 30px;
+  line-height: 28px;
   margin-bottom: 0.3em;
   transform: rotate(-8deg);
   transition: font-size 0.1s ease;
@@ -57,26 +69,4 @@
 
 .blog-title-first-line {
   padding-left: 15px;
-}
-
-
-@media only screen
-  and (max-device-width: 640px),
-  only screen and (max-device-width: 667px),
-  only screen and (max-width: 480px) {
-  .blog-title {
-    font-size: 30px;
-    line-height: 28px;
-  }
-
-  .nav .container {
-    align-items: center;
-    flex-direction: column;
-    width: 100%;
-  }
-
-  .nav .container .nav-links {
-    padding: $small-spacing 0 $smallest-spacing;
-    position: static;
-  }
 }
